# tau-evo

./: .env.example  .gitignore  .gitmodules  ABSTRACT.md  CLAUDE.md  HSE_GSB_STYLE_GUIDE.md  PTE Assignment_Dementev_PRACTICAL.docx  README.md  defense_presentation.pptx  internship_review_dementev_v2.docx  project-plan.md  pyproject.toml  report_final.docx  research-presentation-structure.md  thesis_results_presentation.pptx
.claude/: settings.local.json
analysis/: run_stats_from_heatmaps.py  statistical_tests.py  translate_sweep_svgs.py
evo/: __init__.py  __main__.py  config.py  loop.py  models.py  parallel_loop.py  session_log.py
internship/: gen_internship_report.py  gen_review.py  hse_gsb_style.js  internship_report_dementev.docx
plans/: Revised_Experimental_Plan.md  baseline_comparison_plan.md  decompose_mode.md  methodology_1_benchmark_setup.md  methodology_2_experimental_design.md  methodology_3_evolution_framework.md  methodology_4_implementation_details.md  milestone_1_initial_loop.md  phase_1_thesis.md  plan_train_test_split.md  where_to_get_tau.md
slides/: defense.pptx  defense_edit_plan.md  defense_presentation.pptx  defense_ru.pptx  defense_slides_1_6.pptx  defense_structure.md  gen_economic_analysis.py  gen_fix_tier_chart.py  gen_limitations_slide.py  gen_literature_review_slides.py  gen_q1_slide.py  gen_q3_slide.py  gen_roadmap.py  gen_slide_figures.py  limitations_future_work.pptx  literature_review.pptx  literature_review_v2.pptx  q1_results.pptx  q3_results.pptx  thesis_results_presentation.pptx  Шаблон презентации ВШБ.pptx
text/: build.sh  (+24 more)
(+133 files in other folders)
